[project]
name = "experiment"
version = "0.1.0"
description = "This is an example of running a Jupyter kernel and manually sending messages to it"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.23.2",
    "jupyter>=1.1.1",
    "pylyzer>=0.0.76",
    "zmq>=0.0.0",
]
